<resources>
    <string name="app_name">OffersWindow</string>
    <string name="splash_msg">Open the offers window to see the exciting offers &amp; deals.</string>
    <string name="restart">Restart</string>
    <string name="new_app_ready">New app is ready</string>
    <string name="downloading_start">Downloading started</string>
    <string name="update_failed">Update failed</string>
    <string name="temp_images_dir">temp_images</string>
    <string name="temp_image">temp_image.jpg</string>
    <string name="authorities">com.customer.offerswindow.fileprovider</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="signup">Create Account</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signin">Sign in</string>
    <string name="something_went_wrong">Oops! Something went wrong.</string>
    <string name="okay">Okay</string>
    <string name="resend">We have sent Otp to your number ? <b> Resend</b></string>
    <string name="forgetpassword">Forgot password</string>
    <string name="create_account">Don\'t have an Account ? <font fgcolor="#2B83ED"><b>Create One</b></font></string>
    <string name="email_address_or_phone_number">Phone Number*</string>
    <string name="enter_otp">Enter 4 digit Pin</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="verify">Proceed</string>
    <string name="_email_number_resend">We have sent Otp to your email/number ? <b> Resend</b></string>
    <string name="already_have_an_account_signin">Already have an Account ?<font fgcolor="#2B83ED"><b> signin</b></font></string>
    <string name="phone_number">Phone number*</string>
    <string name="email_address">Email Address*</string>
    <string name="lastname">Lastname*</string>
    <string name="firstname">Firstname*</string>
    <string name="we_have_sent_otp_to">We have sent Otp to</string>
    <string name="Continue">Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="recovered_account">"You have successfully \n Recovered account"</string>
    <string name="return_to_login">Return to Login</string>
    <string name="search_offers_any_brand">Search offers any brand</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="categoriename">Apartments</string>
    <string name="available_balance">Available Balance</string>
    <string name="choose_an_action">Choose an action:</string>
    <string name="actionSheet_camera">Image</string>
    <string name="actionSheet_video">Video</string>
    <string name="actionSheet_gallery">Gallery</string>
    <string name="actionSheet_myfiles">My files</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="book_this_offer">Book this offer</string>
    <string name="slot_booking">Slot booking</string>
    <string name="available_slots">Available Slots</string>
    <string name="slots_full">Slots Full</string>
    <string name="fast_filling">Fast filling</string>
    <string name="available">Available</string>
    <string name="contact_details">Contact Details:</string>
    <string name="book_now">Book Now</string>
    <string name="save">Save</string>
    <string name="reward_points">Reward Points</string>
    <string name="redeem_now">Redeem now</string>
    <string name="no_results_found">No results found</string>
    <string name="please_check_your_search_query_or_try_a_new_search">Please check your search query or try a new search</string>
    <string name="grab_the_best_deal">Never Miss a Deal Again!</string>
    <string name="offerswindowbring">OffersWindow brings you the best discounts, promo codes, and special offers from your favorite brands</string>
    <string name="track_order">Track order !!</string>
    <string name="proceed">Proceed</string>
    <string name="version">Version :</string>
    <string name="all">All</string>
    <string name="more_offers_you_may_like">More offers you may Like</string>
    <string name="booking_details">Booking Details</string>
    <string name="gold_price_today">Gold Price Today</string>
    <string name="view_history">View History</string>
    <string name="wallet_number_amazon_a_c_no">Wallet Number/Amazon A/C No</string>
    <string name="value_of_redemption">Value of Redemption</string>
    <string name="no_of_points_to_redeem">No.of points to Redeem</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="delete_account">Delete Account</string>
    <string name="other_services_for_you">Other Services for you</string>
    <string name="onesignappid">7b903495-1dc6-49f9-a3bf-19309adf3281</string>
    <string name="enable_location_permission_setting_info">This app needs location permission to continue. Please go to settings and allow location permission.</string>
    <string name="enter_verificattion_code">Enter Verificattion Code</string>
    <string name="whatsappmsg">I found this offer in OffersWindow app. I would like to know more details about this offer  Are you available to discuss now?</string>
    <string name="please_visit">Please visit my bookings page to view your booking details</string>
    <string name="call">call</string>
    <string name="offer_validity">Offer Validity</string>
    <string name="add">Add</string>
    <string name="offer_location_details"><u>Offer Location Details</u></string>
    <string name="ucontact_details"><u>Contact Details</u></string>
    <string name="offer_details"><u>Offer Details</u></string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact Us</string>
    <string name="gold_price">Gold Price</string>
    <string name="wishlist">WishList</string>
    <string name="my_bookings">My Bookings</string>
    <string name="rewards">Rewards</string>
    <string name="slot_bookings">Slot bookings</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="please_enter_4_digit_pin">Please Enter 4 digit pin </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reward_points_balance">Reward Points Balance</string>
    <string name="submit">Submit</string>


</resources>