<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_vehicle"
        android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />

        <item
            android:id="@+id/menu_slotbooking"
            android:title="@string/slot_bookings" />


        <item
            android:id="@+id/menu_addpost"
            android:title="Post Offer" />

        <item
            android:id="@+id/menu_Rewards"
            android:title="@string/rewards" />


        <item
            android:id="@+id/menu_mybookings"
            android:title="@string/my_bookings" />

        <item
            android:id="@+id/menu_wishlist"
            android:title="@string/wishlist" />

        <item
            android:id="@+id/menu_notification"
            android:title="@string/notification" />

        <item
            android:id="@+id/menu_gold"
            android:title="@string/gold_price" />

        <item
            android:id="@+id/menu_aboutus"
            android:title="@string/about_us" />


        <item
            android:id="@+id/menu_contactus"
            android:title="@string/contact_us" />


        <item
            android:id="@+id/menu_logout"
            android:title="@string/logout" />


    </group>
</menu>