<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.InputType" />

        <variable
            name="onItemClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="vm"
            type="com.customer.offerswindow.ui.onboarding.signIn.SignInViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/auth_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_sign_lbl"
                    style="@style/AG_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_52sdp"
                    android:gravity="center"
                    android:paddingStart="@dimen/_25sdp"
                    android:paddingEnd="@dimen/_25sdp"
                    android:text="@string/signin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/login_lyout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_lbl">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/mobileno_lyout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:background="@drawable/et_style"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_mobilenumber"
                            style="@style/AG_regular"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_32sdp"
                            android:layout_marginEnd="@dimen/_55sdp"
                            android:background="@null"
                            android:hint="@string/email_address_or_phone_number"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="12"
                            android:maxLines="1"
                            android:paddingStart="@dimen/_8sdp"
                            android:singleLine="true"
                            android:textColorHint="@color/color_272727"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/verify"
                            style="@style/Ag_body_copy_small"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingEnd="@dimen/_8sdp"
                            android:text="@string/verify"
                            android:textColor="@color/color_0044FF"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_pswrd"
                        style="@style/AG_regular"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:background="@drawable/et_style"
                        android:hint="@string/enter_otp"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_272727"
                        android:textSize="@dimen/_12ssp"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/resend_txt"
                        app:passwordToggleEnabled="true" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login_btn"
                        style="@style/Ag_body"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:visibility="gone"
                        app:cornerRadius="@dimen/_8sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_pswrd" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/resend_txt"
                        style="@style/Ag_body_copy_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:text="@string/resend"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mobileno_lyout" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/terms_txt"
                        style="@style/AG_altbold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10ssp"
                        android:checked="true"
                        android:text="@string/terms_amp_conditions"
                        android:textColor="@color/color_2B83ED"
                        android:textSize="@dimen/_12ssp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/forgotpswrd"
                        app:layout_constraintTop_toBottomOf="@id/forgotpswrd" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/privacy_txt"
                        style="@style/AG_altbold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10ssp"
                        android:checked="true"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/color_2B83ED"
                        android:textSize="@dimen/_12ssp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/forgotpswrd" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <ProgressBar
                    android:id="@+id/pgBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="@{vm.isloading ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/skip_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/round_primary_bg"
                android:padding="@dimen/_10sdp"
                android:text="Skip Login"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/auth_lay" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/siginup_txt"
                style="@style/Ag_body_copy_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_35sdp"
                android:text="@string/create_account"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/skip_txt" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/version_textview"
                style="@style/AG_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:textSize="@dimen/_12ssp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:text="@string/app_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>