<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.customer.offerswindow.ui.wallet.rewardPointHistory.redemption.RedemptionViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.wallet.rewardPointHistory.redemption.RedemptionFragment">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/activityblc_txt"
                style="@style/Ag_h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/reward_points_balance"
                android:textColor="@color/color_FFCB01"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/walletcard"
                style="@style/AG_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:textColor="@color/color_7C7C7C"
                android:textSize="@dimen/_12ssp"
                app:cardBackgroundColor="@color/color_EFF1F4"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activityblc_txt">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/walletamount_lbl"
                    style="@style/AG_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@{viewModel.walletbalance}"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_18ssp"
                    tools:text="0" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_noofpoints"
                style="@style/AG_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:background="@drawable/et_style"
                android:hint="@string/no_of_points_to_redeem"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="@dimen/_8sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_font"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/walletcard"
                app:passwordToggleEnabled="true" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_transactiontype"
                style="@style/AG_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:background="@drawable/et_style"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/arrow_drop_down"
                android:focusable="false"
                android:hint="@string/transaction_type"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:paddingStart="@dimen/_8sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_font"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_noofpoints"
                app:passwordToggleEnabled="true" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_valueofpoints"
                style="@style/AG_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:background="@drawable/et_style"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/value_of_redemption"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="@dimen/_8sdp"
                android:singleLine="true"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_font"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_transactiontype"
                app:passwordToggleEnabled="true" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_walletnumber"
                style="@style/AG_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:background="@drawable/et_style"
                android:hint="@string/wallet_number_amazon_a_c_no"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="@dimen/_8sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_font"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_valueofpoints"
                app:passwordToggleEnabled="true" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                style="@style/AG_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:background="@drawable/et_style"
                android:gravity="start"
                android:hint="@string/delivery_address"
                android:imeOptions="actionDone"
                android:maxLines="3"
                android:paddingStart="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_font"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_walletnumber"
                app:passwordToggleEnabled="true" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_userpin"
                style="@style/AG_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:background="@drawable/et_style"
                android:hint="@string/enter_otp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="@dimen/_8sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_font"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_address"
                app:passwordToggleEnabled="true" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/redeem_btn"
                style="@style/Ag_body"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/redeem_now"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_userpin" />



            <ProgressBar
                android:id="@+id/pgBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="@{viewModel.isloading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>